# idle-cave-miner-bot

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  clicker.rs  config.rs  geometry.rs  input.rs  logger.rs  main.rs  scheduler.rs  settings.rs  stats.rs  types.rs  ui.rs
src/ui/: forge.rs  mining.rs  mod.rs  prestige.rs  upgrades.rs
