[package]
name = "idle-miner-bot"
version = "2.0.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.40", features = ["rt-multi-thread", "time", "macros", "sync"] }
anyhow = "1.0"

# Input
enigo = "0.1"
device_query = "1.1"

# UI
ratatui = "0.29"
crossterm = "0.28"

# Time
chrono = "0.4"

# Performance
parking_lot = "0.12"
once_cell = "1.20"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3