[package]
name = "idle-cave-miner-bot"
version = "2.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.28"
device_query = "2.1"
enigo = "0.2"
parking_lot = "0.12"
ratatui = "0.28"
tokio = { version = "1.40", features = ["full"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1